Added compatibility for 26.4 rocksdb
## Summary

- Avoid creating RocksDB column families just by opening a database.
- Treat missing known column families as empty for reads/streams.
- Lazily create column families only when data is actually written.
- Allow databases with unknown existing column families to open, so newer Teku can avoid breaking downgrade to released versions when no new-column data has been written.

## Motivation

Opening `master` against a `26.4.0` V6 database could create newly added column families eagerly. After that, `26.4.0` could no longer reopen the database because RocksDB requires every existing column family to be explicitly opened.

This preserves compatibility without bumping the database version for open-only/no-write cases.